--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <li>Experience building, programming and applying iterative and recursive algorithms for data validation</li>
                     <li>In-depth problem-solving skills and iterative design strengthened through engineering design projects</li>
                     <li>Developed scalable wesbites for optimized cross-platform performance</li>
-                    <li>Experienced using a variety of front-end, back-end and query languages for professional projects</li>
+                    <li>Experience using a variety of front-end, back-end and query languages for professional projects</li>
                 </ul>
             </div>
         </div>
@@ -262,7 +262,7 @@
                 <!--EMPLOYEMENT 1-->
                 <b>Software Engineering Intern, Environment and Climate Change Canada</b>
                 <ul>
-                    <li>Used SQL and Access to iteratively develope and deploy testing scripts for complex relational databases</li>
+                    <li>Used SQL and Access to iteratively develop and deploy testing scripts for complex relational databases</li>
                     <li>Developed SQL queries to test critical business rules governing data validation</li>
                     <li>Played critical role in documenting and facilitating complex data projects with multiple stakeholders</li>
                 </ul>
@@ -276,7 +276,7 @@
                 <!--EMPLOYEMENT 3-->
                 <b>Boating Specalist at le Parc de la Rivière des Milles Iles</b>
                 <ul>
-                    <li>Worked in francophone environment - comfortably guided customers and administrated park services</li>
+                    <li> Comfortably guided customers and administrated park services while working in francophone environment</li>
                     <li>Excellent time management skills used to balance instruction of large volumes of customers in kayak/canoeing
                         techniques, and administration of rental services, ensuring customer safety</li>
                 </ul>
@@ -297,13 +297,13 @@
                     <li>Pynn leverages Android Studio's scalable IntelliJ Java platform to deliver multimedia content to adventure-driven
                         users seeking what our beautiful world has to offer</li>
                     <li>
-                        <a id="moreAboutPynn">Learn more about how Pynn will change the way we share experiences</a>
+                        <a id="moreAboutPynn" style="color: #adadad">Learn more about how Pynn will change the way we share experiences</a>
                     </li>
                 </ul>
                 <!--rubikGO-->
                 <b>rubikGo</b>
                 <ul>
-                    <li>A program designed to solve any combination of a rubik cube</li>
+                    <li>A program designed to solve any combination of a rubik's cube</li>
                     <li>rubikGo will leverage the low-level structure of C++ to deliver lighting-fast execiton</li>
                     <li>rubikGo is in the
                         <b>system architecture</b> stage and will be transitioning to software development</li>
@@ -417,10 +417,10 @@
                 <p class="lead">
                     Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in its first iteration
                     Synthesis Phase of the
-                    <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/" target="_blank">Inerative Design Process</a>
+                    <a href="https://www.invisionapp.com/blog/iterative-prototyping-and-feedback-for-better-ux-design/" target="_blank">Iterative Design Process</a>
                     , takes a different approach towards the way we share content by moving the focus from a user's profile to the user's experiences.
                     Users share media consisting of video, photos and text with their connections (friends/followers). Pynn
-                    compiles this media into a sharible package and allows other users to share those same experiences.
+                    compiles this media into a sharable package and allows other users to share those same experiences.
                 </p>
                 <p class="lead">
                     Pynn is currently being written in Android Studio, leveraging the scalable flexibility of the IntelliJ Java framwork.
@@ -444,16 +444,14 @@
             <div class="col-sm-8">
                 <p class="lead">
                     <b>rubikGo</b> is an algorithm-based program that is currently being designed to solve any possible combination
-                    of a rubik cube. The algorithm will leverage the lighting-fast, low-level computing power of C++ to quickly
-                    provide solutions. rubikGo is currently in the program architecture phase of design and will soon be
-                    moving to the program development phase. The prospective plan for rubikGo is to merge the backend complex
+                    of a rubik's cube. The algorithm will leverage the lighting-fast, low-level computing power of C++ to quickly
+                    provide solutions. The prospective plan for rubikGo is to merge the backend complex
                     algorithm with a GUI to create a workable model that could be leveraged by users to test themselves against
                     an algorithm that will
                     <b>always</b> find the fastest solution.
                 </p>
                 <p class="lead">
-                    RubikGo is currently in the system architecture phase and will be moving to the development phase. The program will be written
-                    in C++.
+                    RubikGo is currently in the system architecture phase and will be moving to the development phase.
                 </p>
 
             </div>
@@ -480,11 +478,11 @@
                 <p class="lead">
                     Gangl is an application designed by a Systems Design Team to improve the mental health of University students by managing
                     their workload through a simple UI and reminder system. Gangl was developed using an iterative design
-                    process beginning with a problem statement, that developed into a low fidelity prototype, medium fidelity
+                    process beginning with a problem statement. It developed into a low fidelity prototype, medium fidelity
                     prototype and finally a functional high fidelity prototype.
                 </p>
                 <p class="lead">
-                    Gangl incorporated user testing, and the usage of Marvel, and Invision app for the purposes of rapid prototyping and extensive
+                    Gangl incorporated user testing, the usage of Marvel, and Invision app for the purposes of rapid prototyping and extensive
                     design iteration. It was developed by the Gangl Design Team using Android Studio.
                 </p>
                 <p class="lead">
@@ -767,7 +765,7 @@
                     specifically, the unique impact of that understanding.
                 </p>
                 <p class="lead">
-                    Through my exposure and interest to software, and my personal persuit of web development I found a keen interest in the connection
+                    Through my exposure to, and interest in software, as well as my personal persuit of web development I found a keen interest in the connection
                     between a user's experience and the interface that is presented to that user.
                 </p>
             </div>
@@ -785,9 +783,8 @@
         <div class="row">
             <div class="col-sm-8">
                 <p class="lead">
-                    How would you define Sammy? My interests vary from guitar to snowboarding (a sport that has landed me with many injury-related
-                    setbacks). I believe that a person's experience shapes who they are. As an active individual, I emphasize
-                    the importance of physcial activity as well as music in my work. I also advocate accessibility of technology.
+                    How would you define Sammy? My interests vary from guitar to snowboarding, and travel, I believe that a person's experience shapes who they are. As an active, bilingual individual, I emphasize
+                    the importance of physcial activity as well as music and functionality in my work. I also advocate accessibility of technology.
                     whether cross-cultural, demographic, or physical, I believe that technology should reach all people.
                 </p>
             </div>
