--- a/wireframes.html
+++ b/wireframes.html
@@ -70,8 +70,8 @@
             <p class="lead">
                 To provide a platform to:
                 <ul>
-                    <li>Advertise the skill uniquness and personal diversity of Sammy Robens-Paradise</li>
-                    <li>Describe the above to possible employers or those who may be of interest</li>
+                    <li>Advertise the unique skill and personal diversity of Sammy Robens-Paradise</li>
+                    <li>Describe the above to potential employers or those who may be of interest</li>
                 </ul>
             </p>
         </div>
