added google analytics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <title>Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122502618-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-122502618-1');
+    </script>
+
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
@@ -444,10 +457,10 @@
             <div class="col-sm-8">
                 <p class="lead">
                     <b>rubikGo</b> is an algorithm-based program that is currently being designed to solve any possible combination
-                    of a rubik's cube. The algorithm will leverage the lighting-fast, low-level computing power of C++ to quickly
-                    provide solutions. The prospective plan for rubikGo is to merge the backend complex
-                    algorithm with a GUI to create a workable model that could be leveraged by users to test themselves against
-                    an algorithm that will
+                    of a rubik's cube. The algorithm will leverage the lighting-fast, low-level computing power of C++ to
+                    quickly provide solutions. The prospective plan for rubikGo is to merge the backend complex algorithm
+                    with a GUI to create a workable model that could be leveraged by users to test themselves against an
+                    algorithm that will
                     <b>always</b> find the fastest solution.
                 </p>
                 <p class="lead">
@@ -760,13 +773,13 @@
                     As someone who advocates optimized engineering solutions, I continue on my journey to find the most eloquent and beautiful
                     solutions to the worlds most challening problems. I have always taken an interest in the way humans interact
                     with technology, and more specifically, the way it shapes our
-                    <b>experiences</b>. I chose to study Systems Design Engineering because of my fascination with the
-                    way one user's experience of a product or service can shape their understanding of the world, and more
-                    specifically, the unique impact of that understanding.
+                    <b>experiences</b>. I chose to study Systems Design Engineering because of my fascination with the way one
+                    user's experience of a product or service can shape their understanding of the world, and more specifically,
+                    the unique impact of that understanding.
                 </p>
                 <p class="lead">
-                    Through my exposure to, and interest in software, as well as my personal persuit of web development I found a keen interest in the connection
-                    between a user's experience and the interface that is presented to that user.
+                    Through my exposure to, and interest in software, as well as my personal persuit of web development I found a keen interest
+                    in the connection between a user's experience and the interface that is presented to that user.
                 </p>
             </div>
         </div>
@@ -783,9 +796,10 @@
         <div class="row">
             <div class="col-sm-8">
                 <p class="lead">
-                    How would you define Sammy? My interests vary from guitar to snowboarding, and travel, I believe that a person's experience shapes who they are. As an active, bilingual individual, I emphasize
-                    the importance of physcial activity as well as music and functionality in my work. I also advocate accessibility of technology.
-                    whether cross-cultural, demographic, or physical, I believe that technology should reach all people.
+                    How would you define Sammy? My interests vary from guitar to snowboarding, and travel, I believe that a person's experience
+                    shapes who they are. As an active, bilingual individual, I emphasize the importance of physcial activity
+                    as well as music and functionality in my work. I also advocate accessibility of technology. whether cross-cultural,
+                    demographic, or physical, I believe that technology should reach all people.
                 </p>
             </div>
             <div class="col-sm-4">
