--- a/404_go_error.html
+++ b/404_go_error.html
@@ -16,20 +16,23 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
@@ -40,16 +43,18 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <img id="landing_page_img" src="20Artboard 1.png" class="center" width="100%" height="auto" alt="Landing Page Art">>
+                <img id="landing_page_img" src="20Artboard 1.png" class="center" width="100%" height="auto"
+                    alt="Landing Page Art">>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                    <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="https://sammyrobensparadise.github.io/SammyRobensParadise.github.io/index.html">
-                            Take me home...
-                    </a>
+                <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text"
+                    href="https://sammyrobensparadise.github.io/SammyRobensParadise.github.io/index.html">
+                    Take me home...
+                </a>
             </div>
         </div>
     </div>
@@ -68,10 +73,12 @@
                     <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank" class="fa fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
+                        class="fa fa-linkedin"></a>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank" class="fa fa-github"></a>
+                    <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank"
+                        class="fa fa-github"></a>
                 </div>
             </div>
             <br>
