added meta card for resume

--- a/index.html
+++ b/index.html
@@ -51,31 +51,8 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body onload="splash(2000)">
+<body>
     <!--SPLASH SCREEN-->
-    <div id="splashscreen" class="loader">
-        <br>
-        <br>
-        <br>
-        <div class="loaderIcon"></div>
-        <br>
-        <br>
-        <div>
-            <p class="lead text-center" style="color: #0D0D0D !important;">
-                Getting organized
-                <span class="dots">...</span>
-            </p>
-            <br>
-            <br>
-            <blockquote class="blockquote text-center">
-                <p class="mb-0 lead text-center" style="color: #000000 !important;">"Look at usual things with unusual
-                    eyes."</p>
-                <footer class="blockquote-footer">Vico Magistretti
-                    <cite title="Source Title">Industrial Designer</cite>
-                </footer>
-            </blockquote>
-        </div>
-    </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default ">
@@ -148,33 +125,41 @@
     <!--END OF MODAL SECTION-->
 
     <!--THE FOLLOWING SECTION IS THE LANDING PAGE-->
-        <div class="row">
-            <div class="col-sm-12">
-               <h1 class="center landing-text display-2">Sammy Robens-Paradise</h1>
-            
-                <div class="landing-image">
-                    
-                </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="center landing-text display-2">Sammy Robens-Paradise</h1>
+            <div class="landing-image">
             </div>
-            </div>
+        </div>
     </div>
-    <div class="section link out">
+    </div>
+    <div class="section-link-out">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
-                        <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="#" alt="Card image cap">
-                                <div class="card-body">
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                              </div>
+                <div class="col-sm-6 d-flex justify-content-center">
+                    <div class="card" style="width: 100%;">
+                        <a href="https://sammy.world" target="_blank"><img class="card-img-top"
+                                src="./src/assets/meta-card-portfolio@2x.png" alt="Card image cap"></a>
+                        <div class="card-body">
+                            <p class="card-text">Explore my portfolio, <b>Design & Develop with Me</b> featuring custom
+                                design, projects, work and more... </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-6">section 2</div>
+                <div class="col-sm-6 d-flex justify-content-center">
+                    <div class="card" style="width: 100%;">
+                        <a href="https://sammy.world" target="_blank"><img class="card-img-top"
+                                src="./src/assets/ResumeImage.png" alt="Card image cap"></a>
+                        <div class="card-body">
+                            <p class="card-text align-items-center">Get straight to it and check out my <b>Résumé</b>...</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-   
+
     <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
 
     <footer class="footer">
