--- a/index.html
+++ b/index.html
@@ -142,16 +142,36 @@
                                 src="./src/assets/meta-card-portfolio@2x.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text">Explore my portfolio, <b>Design & Develop with Me</b> featuring custom
-                                design, projects, work and more... </p>
+                                design, projects, work and more... <code>beta version 0.1</code></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="https://sammy.world" target="_blank"><img class="card-img-top"
+                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
                                 src="./src/assets/ResumeImage.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text align-items-center">Get straight to it and check out my <b>Résumé</b>...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 d-flex justify-content-center">
+                    <div class="card" style="width: 100%;">
+                        <a href="https://sammy.world" target="_blank"><img class="card-img-top"
+                                src="./src/assets/Artworkcardcover.png" alt="Card image cap"></a>
+                        <div class="card-body">
+                            <p class="card-text">Showcase of some little designs and custom vectors <b>created by me...</b></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 d-flex justify-content-center">
+                    <div class="card" style="width: 100%;">
+                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
+                                src="./src/assets/aboutsammy.png" alt="Card image cap"></a>
+                        <div class="card-body">
+                            <p class="card-text align-items-center">A little history about <b>me</b>...</p>
                         </div>
                     </div>
                 </div>
