--- a/index.html
+++ b/index.html
@@ -67,13 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_projects">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="navbar_education">Education</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="navbar_experience">Experience</a>
+                    <a class="nav-link" id="navbar_projects" href="https://sammy.world" target="_blank">Portfolio</a>
                 </li>
                 </li>
                 <li class="nav-item">
@@ -168,7 +162,7 @@
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
+                        <a href="https://sammy.world" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
                                 src="./src/assets/aboutsammy.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text align-items-center">A little history about <b>me</b>...</p>
@@ -181,44 +175,7 @@
 
 
     <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-
-    <footer class="footer">
-        <div class="container">
-            <p class="text-right lead">Website created by Sammy Robens-Paradise</p>
-            <p class="text-right lead">Email: srobensp@edu.uwaterloo.ca</p>
-            <p class="text-right lead">Phone: 778-887-9189</p>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
-                        class="fa fa-linkedin"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank"
-                        class="fa fa-github"></a>
-                </div>
-
-            </div>
-            <br>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <p class="lead">
-                            <a href="wireframes.html" target="_blank">Learn about the iterative development of this
-                                website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <br>
-    </footer>
     <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-
+    <div class="bottom-padding"></div>
+</body>
 </html>
