added images for creative page

--- a/index.html
+++ b/index.html
@@ -71,12 +71,17 @@
                 </li>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"
+                        id="navbar_resume">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./creations.html" download="Sammy Robens-Paradise Resume"
+                        id="navbar_resume">Creations</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" id="navbar_whos_sammy">Who's Sammy</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" id="navbar_resume">Resume</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_contact" data-toggle="modal" data-target="#contactModal">Contact</a>
                 </li>
@@ -142,10 +147,11 @@
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
-                                src="./src/assets/ResumeImage.png" alt="Card image cap"></a>
+                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img
+                                class="card-img-top" src="./src/assets/ResumeImage.png" alt="Card image cap"></a>
                         <div class="card-body">
-                            <p class="card-text align-items-center">Get straight to it and check out my <b>Résumé</b>...</p>
+                            <p class="card-text align-items-center">Get straight to it and check out my <b>Résumé</b>...
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -153,10 +159,11 @@
             <div class="row">
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="https://sammy.world" target="_blank"><img class="card-img-top"
+                        <a href="./creations.html"><img class="card-img-top"
                                 src="./src/assets/Artworkcardcover.png" alt="Card image cap"></a>
                         <div class="card-body">
-                            <p class="card-text">Showcase of some little designs and custom vectors <b>created by me...</b></p>
+                            <p class="card-text">Showcase of some little designs and custom vectors <b>created by
+                                    me...</b></p>
                         </div>
                     </div>
                 </div>
@@ -178,4 +185,5 @@
     <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
     <div class="bottom-padding"></div>
 </body>
+
 </html>
