added images for creative.html

--- a/creations.html
+++ b/creations.html
@@ -173,40 +173,77 @@
             </div>
             <!--Row 3-->
             <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative6@2x.png" alt="Card image cap">
-                        </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative6@2x.png" alt="Card image cap">
                     </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative7@2x.png" alt="Card image cap">
-                        </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative7@2x.png" alt="Card image cap">
                     </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative8@2x.png" alt="Card image cap">
-                        </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative8@2x.png" alt="Card image cap">
                     </div>
+                </div>
             </div>
             <!--Row 4-->
             <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative9@2x.png" alt="Card image cap">
-                        </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative9@2x.png" alt="Card image cap">
                     </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative10@2x.png" alt="Card image cap">
-                        </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative10@2x.png" alt="Card image cap">
                     </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative11@2x.png" alt="Card image cap">
-                        </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative11@2x.png" alt="Card image cap">
                     </div>
+                </div>
             </div>
+            <!--Row 5-->
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative12@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative13@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative14@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <!--Row 6-->
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative15@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative16@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative17@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <div style="text-align: right;"><a href="index.html">Back home...</a></div>
         </div>
     </div>
 
